Added UserPreferences.statisticsVisibility
Created two endpoints to GET/SET value.
